--- a/package.json
+++ b/package.json
@@ -1,39 +1,28 @@
 {
-  "name": "webauth",
+  "name": "webauth-client",
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "dev": "vite --host 0.0.0.0",
-    "build": "run-p type-check build-only",
+    "dev": "vite",
+    "build": "vite build",
     "preview": "vite preview",
     "test:unit": "vitest --environment jsdom --root src/",
-    "build-only": "vite build",
-    "type-check": "vue-tsc --noEmit -p tsconfig.vitest.json --composite false",
-    "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore"
+    "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore"
   },
   "dependencies": {
-    "@simplewebauthn/browser": "^6.2.2",
-    "axios": "^1.2.1",
     "vue": "^3.2.45",
     "vue-router": "^4.1.6"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.1.4",
-    "@types/jsdom": "^20.0.1",
-    "@types/node": "^18.11.12",
     "@vitejs/plugin-vue": "^4.0.0",
     "@vue/eslint-config-prettier": "^7.0.0",
-    "@vue/eslint-config-typescript": "^11.0.0",
     "@vue/test-utils": "^2.2.6",
-    "@vue/tsconfig": "^0.1.3",
     "eslint": "^8.22.0",
     "eslint-plugin-vue": "^9.3.0",
     "jsdom": "^20.0.3",
-    "npm-run-all": "^4.1.5",
     "prettier": "^2.7.1",
-    "typescript": "~4.7.4",
     "vite": "^4.0.0",
-    "vitest": "^0.25.6",
-    "vue-tsc": "^1.0.12"
+    "vitest": "^0.25.6"
   }
 }
