--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore"
   },
   "dependencies": {
+    "@simplewebauthn/browser": "^6.2.2",
     "axios": "^1.2.1",
     "jwt-decode": "^3.1.2",
     "pinia": "^2.0.28",
